import from overleaf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,13 +1,5 @@
-@misc{weissman2010custom,
-  title={Custom entities and fields in a multi-tenant database system},
-  author={Weissman, Craig and Wong, Simon},
-  year={2010},
-  month=aug # "~17",
-  publisher={Google Patents},
-  note={US Patent 7,779,039}
-}
-
 @inproceedings{bezemer2010multi,
+  url={https://dl-acm-org.libproxy.helsinki.fi/doi/pdf/10.1145/1862372.1862393},
   title={Multi-tenant SaaS applications: maintenance dream or nightmare?},
   author={Bezemer, Cor-Paul and Zaidman, Andy},
   booktitle={Proceedings of the Joint ERCIM Workshop on Software Evolution (EVOL) and International Workshop on Principles of Software Evolution (IWPSE)},
@@ -16,6 +8,7 @@
 }
 
 @inproceedings{weissman2009design,
+  url={https://dl-acm-org.libproxy.helsinki.fi/doi/pdf/10.1145/1559845.1559942},
   title={The design of the force. com multitenant internet application development platform},
   author={Weissman, Craig D and Bobrowski, Steve},
   booktitle={Proceedings of the 2009 ACM SIGMOD International Conference on Management of data},
@@ -24,6 +17,7 @@
 }
 
 @inproceedings{kwok2008software,
+  url={https://ieeexplore-ieee-org.libproxy.helsinki.fi/stamp/stamp.jsp?tp=&arnumber=4578523},
   title={A software as a service with multi-tenancy support for an electronic contract management application},
   author={Kwok, Thomas and Nguyen, Thao and Lam, Linh},
   booktitle={2008 IEEE International Conference on Services Computing},
@@ -34,6 +28,7 @@
 }
 
 @inproceedings{huber2011evaluating,
+  url={https://www.scitepress.org/Papers/2011/33889/33889.pdf},
   title={Evaluating and Modeling Virtualization Performance Overhead for Cloud Environments.},
   author={Huber, Nikolaus and von Quast, Marcel and Hauck, Michael and Kounev, Samuel},
   booktitle={CLOSER},
@@ -42,6 +37,7 @@
 }
 
 @inproceedings{hossain2015cloud,
+  url={https://link.springer.com/chapter/10.1007/978-3-319-21006-3_18},
   title={Cloud Computing: A Multi-tenant Case Study},
   author={Hossain, Anindya and Shirazi, Farid},
   booktitle={International Conference on Human-Computer Interaction},
@@ -51,6 +47,7 @@
 }
 
 @article{momm2011qualitative,
+  url={https://dl.gi.de/bitstream/handle/20.500.12116/19882/139.pdf?sequence=1&isAllowed=y},
   title={A qualitative discussion of different approaches for implementing multi-tenant SaaS offerings1},
   author={Momm, Christof and Krebs, Rouven},
   journal={Software Engineering 2011--Workshopband},
@@ -59,6 +56,7 @@
 }
 
 @article{bezemer2010challenges,
+  url={http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.1007.1734&rep=rep1&type=pdf},
   title={Challenges of reengineering into multi-tenant SaaS applications},
   author={Bezemer, C and Zaidman, Andy},
   journal={Technical Report Series TUD-SERG-2010-012},
@@ -67,9 +65,77 @@
 }
  
 @article{chong2006multi,
+  url={http://ramblingsofraju.com/wp-content/uploads/2016/08/Multi-Tenant-Data-Architecture.pdf},
   title={Multi-tenant data architecture},
   author={Chong, Frederick and Carraro, Gianpaolo and Wolter, Roger},
   journal={MSDN Library, Microsoft Corporation},
   pages={14--30},
   year={2006}
+}
+
+@inproceedings{aulbach2011extensibility,
+  url={https://ieeexplore-ieee-org.libproxy.helsinki.fi/stamp/stamp.jsp?tp=&arnumber=5767872},
+  title={Extensibility and data sharing in evolving multi-tenant databases},
+  author={Aulbach, Stefan and Seibold, Michael and Jacobs, Dean and Kemper, Alfons},
+  booktitle={2011 IEEE 27th International Conference on Data Engineering},
+  pages={99--110},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{krebs2012architectural,
+  url={https://www.scitepress.org/Papers/2012/39576/39576.pdf},
+  title={Architectural Concerns in Multi-tenant SaaS Applications.},
+  author={Krebs, Rouven and Momm, Christof and Kounev, Samuel},
+  journal={Closer},
+  volume={12},
+  pages={426--431},
+  year={2012}
+}
+
+@article{stamelos2003estimating,
+  url={https://www-sciencedirect-com.libproxy.helsinki.fi/science/article/pii/S037872060200099X},
+  title={Estimating the development cost of custom software},
+  author={Stamelos, Ioannis and Angelis, Lefteris and Morisio, Maurizio and Sakellaris, Evaggelos and Bleris, George L},
+  journal={Information \& Management},
+  volume={40},
+  number={8},
+  pages={729--741},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{kaplan2007saas,
+  url={http://webtorials.net/main/resource/papers/BCR/paper125/06kaplan.pdf},
+  title={Saas: Friend or foe?},
+  author={Kaplan, Jeffrey M},
+  journal={Business Communications Review},
+  volume={37},
+  number={6},
+  pages={48},
+  year={2007},
+  publisher={BCR ENTERPRISES INC}
+}
+
+@article{janssen2011challenges,
+  url={https://aisel.aisnet.org/cgi/viewcontent.cgi?article=1079&context=ecis2011},
+  title={Challenges for adopting cloud-based software as a service (saas) in the public sector},
+  author={Janssen, Marijn and Joha, Anton},
+  year={2011}
+}
+
+@article{kinnunen2020yritysjarjestelmat,
+  url={https://jyx.jyu.fi/bitstream/handle/123456789/69742/URN%3aNBN%3afi%3ajyu-202006053999.pdf?sequence=1&isAllowed=y},
+  title={Yritysj{\"a}rjestelm{\"a}t SaaS-palveluna: n{\"a}kemyksi{\"a} liiketoimintakriittisist{\"a} tietoj{\"a}rjestelmist{\"a} pilvess{\"a}},
+  author={Kinnunen, Juha},
+  year={2020}
+}
+@inproceedings{bezemer2010enabling,
+  url={https://ieeexplore-ieee-org.libproxy.helsinki.fi/stamp/stamp.jsp?tp=&arnumber=5609735},
+  title={Enabling multi-tenancy: An industrial experience report},
+  author={Bezemer, Cor-Paul and Zaidman, Andy and Platzbeecker, Bart and Hurkmans, Toine and others},
+  booktitle={2010 IEEE International Conference on Software Maintenance},
+  pages={1--8},
+  year={2010},
+  organization={IEEE}
 }
